refactor(runtime, codegen): remove obsolete classes and use wildcard generics in method signatures
- Deleted deprecated classes from `codegen-html` module (`TagTreeFragmentCache`, `Style`, `StyleSheet`, etc.) and their exports in `module-info.java`.
- Updated `Tag`-related method and field declarations in `runtime` and `codegen-html` modules to use wildcard generics (e.g., `Tag<?>`), improving type safety.